@@ -3350,6 +3350,8 @@ class htmlLink extends htmlElement {
 	private $onClick = null;
 	/** show as button */
 	private $showAsButton = false;
+	/** link id */
+	private $id;
 
 	/**
 	 * Constructor.
@@ -3399,8 +3401,8 @@ class htmlLink extends htmlElement {
 			$onClick = ' onclick="' . $this->onClick . '"';
 		}
 		$idAttr = '';
-		if ($this->showAsButton) {
-			$id = 'a_' . preg_replace('/[^a-zA-Z0-9_]+/', '_', $this->target);
+		if ($this->showAsButton || !empty($this->id)) {
+			$id = !empty($this->id) ? $this->id : 'a_' . preg_replace('/[^a-zA-Z0-9_]+/', '_', $this->target);
 			$idAttr = ' id="' . $id . '"';
 		}
 		$classAttr = '';
@@ -3461,6 +3463,15 @@ class htmlLink extends htmlElement {
 	 */
 	public function setOnClick($event) {
 		$this->onClick = htmlspecialchars($event);
+	}
+
+	/**
+	 * Sets the element id.
+	 *
+	 * @param string $id unique id
+	 */
+	public function setId($id) {
+		$this->id = $id;
 	}
 
 }
